# cold-start-poc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebook/: algorithm.ipynb  movies.csv
notebook/.ipynb_checkpoints/: algorithm-checkpoint.ipynb  movies-checkpoint.csv
src/: db.sqlite3  entrypoint.sh  manage.py  package.json  tailwind.config.js
src/accounts/: models.py
src/accounts/migrations/: 0001_initial.py
src/coldstart/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/coldstart/templates/: base.html  index.html  mylist.html
src/coldstart/templates/account/: login.html
src/movies/: models.py  views.py
src/movies/migrations/: 0001_initial.py  0002_remove_mymovielist_is_disliked_and_more.py  0003_alter_mymovielist_genre_ids_and_more.py  0004_alter_mymovielist_id.py  0005_alter_mymovielist_vote_average.py  0006_alter_mymovielist_release_date.py
src/static/css/: main.css  nprogress.css  output.css  tailwind.css
src/static/js/: embla.js  main.js  rate.js
