[tool.poetry]
name = "coldstart-poc"
version = "0.1.0"
description = ""
authors = ["alex <alexs123655@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
numpy = "^2.2.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
