[tool.poetry]
name = "coldstart-poc"
version = "0.1.0"
description = ""
authors = ["alex <alexs123655@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
numpy = "^2.2.1"
pandas = "^2.2.3"
django-allauth = "^65.3.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pyjwt = "^2.10.1"
python3-saml = "^1.16.0"
python3-openid = "^3.2.0"
requests-oauthlib = "^2.0.0"
cryptography = "^44.0.0"
scikit-learn = "^1.6.0"
psycopg2 = "^2.9.10"
uvicorn = "^0.34.0"
whitenoise = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
